Environment is now set up

--- a/src/static/styles.scss
+++ b/src/static/styles.scss
@@ -1,5 +1,7 @@
-$color: black;
+$background-color: #0f0f23;
+$color: white;
+$text-color: rgb(204, 204, 204);
 
 body {
-  background-color: $color
+  background-color: blue;
 }
