--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,2 +1,42 @@
 body {
-  background-color: blue; }
+  background-color: #0f0f23;
+  color: #cccccc;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 16px; }
+
+a {
+  color: #cccccc;
+  text-decoration: none; }
+  a:hover {
+    text-decoration: underline; }
+
+h1.title {
+  color: #00cc00;
+  text-shadow: 0 0 2px #00cc00, 0 0 5px #00cc00;
+  font-size: 20px; }
+
+.tags {
+  color: #4f4f4f;
+  display: block; }
+
+.company {
+  color: #009900; }
+
+.job {
+  display: block;
+  margin-bottom: 6px;
+  border-bottom: 1px solid black;
+  padding: 4px;
+  display: flex;
+  flex-direction: row; }
+  .job img {
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    background-color: white; }
+  .job .content-column {
+    margin-left: 10px;
+    flex-grow: 1; }
+    .job .content-column .time {
+      white-space: nowrap;
+      color: #4f4f4f; }
